--- a/FRONTEND/vistas/css/plantilla.css
+++ b/FRONTEND/vistas/css/plantilla.css
@@ -52,7 +52,7 @@ a:visited, a:link, a:focus, a:hover, a:active{
 }
 
 .backColor, .backColor a{
-    background: orange;
+    background: #47bac1;
     color: white;
 }
 
