--- a/FRONTEND/vistas/css/cabezote.css
+++ b/FRONTEND/vistas/css/cabezote.css
@@ -206,6 +206,37 @@ ESCRITORIO MEDIANO O TABLET HORIZONTAL (MD revisamos en 1024px)
 		margin-right:-15px;
 	}
 
+	.icon{
+		position: absolute;
+		height: 60%;
+		position: absolute;
+		top: 50%;
+		right: 8px;
+		transform: translateY(-50%);
+		opacity: 0.3;
+		cursor: pointer;
+	}
+	
+	.icon:hover{
+		opacity: 0.8;
+	}
+
+	.passw{
+		outline: none;
+		width: 100%;
+		background-color: white;
+		color: #121212;
+		border: none;
+		position: absolute;
+		top: 8px;
+		left: 0;
+		right: 0;
+		bottom: 8px;
+		padding-left: .5rem;
+		box-sizing: border-box;
+		font-size: 20px;
+	}
+
 }
 
 /*=============================================
