Ocultar contraseña y cambios varios

--- a/FRONTEND/vistas/css/cabezote.css
+++ b/FRONTEND/vistas/css/cabezote.css
@@ -206,7 +206,7 @@ ESCRITORIO MEDIANO O TABLET HORIZONTAL (MD revisamos en 1024px)
 		margin-right:-15px;
 	}
 
-	.icon{
+	.iconEye{
 		position: absolute;
 		height: 60%;
 		position: absolute;
